# Lingze

./: .gitignore  .gitmodules  CMakeLists.txt  Lingze.cpp  Lingze.h  README.md
data/: clone_gltf_assets.ps1  clone_gltf_assets.sh
data/Scenes/: CubeScene.json  DummyScene.json  SponzaScene.json  SponzaSceneLight.json
data/scenes/: SingleHornbug.json  SingleKitten.json
docs/notes/: frustum_culling_algorithm.md
shaders/: BuildAllShaders.bat  BuildGLSL.bat  BuildHLSL.bat  HLSL_README.md  README.md  buildShaders.bat
shaders/glsl/: common_math.h
shaders/glsl/BasicShape/: BasicShape.frag  BasicShape.vert
shaders/glsl/Common/: mip_builder.frag  screen_quad.vert
shaders/glsl/GpuDriven/: BasicShape.vert  Culling.comp  Mesh.h
shaders/glsl/MeshShading/: BasicShape.vert  depthreduce.comp  drawcull.comp  drawcull_late.comp  mesh.h  meshlet.frag  meshlet.mesh  meshlet.task  ms.mesh  ms.task
shaders/hlsl/BasicShape/: BasicShape.frag.hlsl  BasicShape.vert.hlsl
shaders/hlsl/ImGui/: ImGui.frag.hlsl  ImGui.vert.hlsl
shaders/hlsl/MeshShading/: BasicShape.frag.hlsl  BasicShape.vert.hlsl  meshlet.frag.hlsl  meshlet.mesh.hlsl  ps.frag.hlsl
shaders/hlsl/Simple/: Simple.frag.hlsl  Simple.vert.hlsl
src/: Lingze.cpp
src/application/: BasicShapeApp.cpp  DemoApp.cpp  DemoApp.h  EntryPoint.h  LingzeApp.cpp  LingzeApp.h  SimpleMeshShadingApp.cpp  SimpleMeshShadingApp.h  SimpleTriangleApp.cpp  SimpleTriangleApp.h
src/application/BasicShape/: BasicShapeApp.cpp  BasicShapeApp.h  BasicShapeRenderer.cpp  BasicShapeRenderer.h
src/application/GpuDriven/: GpuDrivenApp.cpp  GpuDrivenApp.h  GpuDrivenRenderer.cpp  GpuDrivenRenderer.h
src/application/MeshShading/: MeshShadingApp.cpp  MeshShadingApp.h  MeshShadingRenderer.cpp  MeshShadingRenderer.h
src/application/SimpleMeshShading/: SimpleMeshShadingApp.cpp  SimpleMeshShadingApp.h  SimpleMeshShadingRenderer.cpp  SimpleMeshShadingRenderer.h
src/application/SimpleTriangle/: SimpleRenderer.cpp  SimpleRenderer.h  SimpleTriangleApp.cpp  SimpleTriangleApp.h
src/backend/: App.cpp  App.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Config.h  Core.cpp  Core.h  CoreImpl.h  CpuProfiler.cpp  CpuProfiler.h  DescriptorSetCache.cpp  DescriptorSetCache.h  EngineConfig.h  Framebuffer.cpp  Framebuffer.h  GpuProfiler.cpp  GpuProfiler.h  Handles.h  ImGuiProfilerRenderer.cpp  ImGuiProfilerRenderer.h  Image.cpp  Image.h  ImageLoader.h  ImageView.cpp  ImageView.h  LingzeVK.cpp  LingzeVK.h  Logging.h  MathUtils.h  Pipeline.cpp  Pipeline.h  PipelineCache.cpp  PipelineCache.h  Pool.h  PresentQueue.cpp  PresentQueue.h  ProfilerTask.cpp  ProfilerTask.h  (+30 more)
src/render/: BaseRenderer.h  ImGuiProfilerRenderer.h  ImguiRenderer.cpp  ImguiRenderer.h  MaterialSystem.cpp  MaterialSystem.h  MipBuilder.cpp  MipBuilder.h  RenderContext.cpp  RenderContext.h
src/render/common/: BaseRenderer.h  ImguiRenderer.cpp  ImguiRenderer.h  MipBuilder.cpp  MipBuilder.h
src/render/renderers/: BaseRenderer.h  BasicShapeRenderer.cpp  BasicShapeRenderer.h  SimpleMeshShadingRenderer.cpp  SimpleMeshShadingRenderer.h  SimpleRenderer.cpp  SimpleRenderer.h
src/scene/: CameraComponent.cpp  CameraComponent.h  Component.cpp  Component.h  Config.h  Entity.cpp  Entity.h  EntityScene.cpp  EntityScene.h  LzMesh.cpp  LzMesh.h  Mesh.cpp  Mesh.h  MeshLoader.cpp  MeshLoader.h  Scene.cpp  Scene.h  SceneGraph.cpp  SceneGraph.h  StaticMeshComponent.cpp  StaticMeshComponent.h  Transform.cpp  Transform.h
